--- a/card.html
+++ b/card.html
@@ -16,8 +16,8 @@
     <div id="card"><h4>💖Thank You💖</h4>
     <img src="avarta.jpg">
     <h4 class="text">Có lẽ hôm nay là sinh nhật tớ mong chờ nhất khi có các bạn và điều tớ không ngờ tới là có quà từ người yêu. Tớ thực sự rất cảm kích và cảm ơn cậu nhiều. Hơn thế nữa, cảm ơn tình cảm của cậu dành cho tớ và sự cảm thông những khuyết điểm của tớ. Tớ biết tình yêu bọn mình còn nhiều thử thách. Câu cứ tin ở tớ chỉ cần chúng ta còn yêu thì tớ sẽ không để điều không tốt xảy ra đâu. Đúng rồi phải yêu còn phải gặp Uyên trả nợ nữa chứ. Mãiii yêu Uyênn.❤️️</h4></div>
-    <a class="prev" href="index.html">Trở lại</a>
-    <a class="next" href="flower.html">Tiếp tục</a>
+
+    <a class="continue" href="flower.html">Tiếp tục</a>
 </body>
 
 </html>
