--- a/flower.html
+++ b/flower.html
@@ -53,8 +53,8 @@
             </div>
         </div>
     </div>
-    <a class="prev" href="card.html">Trở lại</a>
-    <a class="next" href="video.html">Tiếp tục</a>
+
+    <a class="continue" href="video.html">Tiếp tục</a>
     <script src="flower.js"></script>
 </body>
 </html>
